--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "countries-list": "^2.6.1",
+    "mdbreact": "^5.2.0",
     "rc-slider": "^9.6.5",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
@@ -19,7 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.1",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
